syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc.examples.SmartAir";
option java_outer_classname = "SmartAirServiceImpl";

package SmartAir;

// Service provided by the monitoring server.
service AirPollutionMonitoring {
  // unary
  rpc  RoomAirQuality (AirQualityRequest) returns (AirQualityReply) {}

  // server side streaming - sends a request for air quality levels for all rooms, reply is a stream of air quality levels for all rooms
  rpc  AllRoomAirQuality (AllAirQualityRequest) returns (stream AirQualityReply) {}

  // bidirectional streaming - sends a request for air quality levels for certain rooms, reply is a stream of air quality levels for the rooms requested
  rpc  RoomsAirQuality (stream AirQualityRequest) returns (stream AirQualityReply) {}

  //client side streaming - sends a request for the average air quality of certain rooms
  rpc AveRoomAirQuality (stream AirQualityRequest) returns (AveAirQualityReply) {}
}

// The request message containing the room's name.
message AirQualityRequest {
  string room = 1;
}
// The request message for all rooms air quality.
message AllAirQualityRequest {
  string allRoom = 1;
}
// The response message containing the air quality level of the room
message AirQualityReply {
  int32 quality = 1;
}
// The response message containing the average air quality level of the rooms provided in request stream
message AveAirQualityReply {
  int32 quality = 1;
}
